# kill_gta5_when_closed_rs

./: Cargo.toml  README.md  appveyor.yml
.github/workflows/: rust.yml
src/: main.rs  processes.rs
