[package]
name = "kill_gta5_enhanced_when_closed_rs"
version = "0.1.0"
authors = ["Andre Goressi"]
edition = "2019"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["handleapi", "psapi", "processthreadsapi", "winnt", "winuser"] }
clap = { version = "3.0.0-beta.2", optional = true }


[build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
OriginalFilename = "killgta5enhancedwhenclosed.exe"
LegalCopyright = "Copyright © 2026 Andre Goressi. All Rights Reserved. Under GNU General Public License 3.0"
ProductName = "GTA5 Freeze-Killer"
ProductVersion = "1.0.0"
FileDescription = "This program scans your system to see if you have a running GTA5.exe with no window open. If that is the case, it kills the app after some time has passed without cleanup."
